force-app/main/default/objects/Discussion__c/Discussion__c.object-meta.xml
<CustomObject>
    <label>Discussion</label>
    <nameField>
        <displayFormat>DCN-{0000}</displayFormat>
        <label>Discussion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discussions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>