force-app/main/default/objects/Discussion__c/fields/Account_SFDC_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_SFDC_ID__c</fullName>
    <formula>Contact__r.AccountId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SFDC ID</label>
    <type>Text</type>
</CustomField>