force-app/main/default/objects/Discussion__c/fields/Discussed_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Person_Name__c</fullName>
    <formula>Contact__r.FirstName  + &apos; &apos; +  Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discussed Person Name</label>
    <type>Text</type>
</CustomField>