force-app/main/default/objects/Discussion__c/fields/Discussion_Title__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Title__c</fullName>
    <label>Discussion Title</label>
    <type>TextArea</type>
</CustomField>