force-app/main/default/objects/Discussion__c/fields/Discussion_Type__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Type__c</fullName>
    <label>Discussion Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>